# anchor-project-template

./: Anchor.toml  Cargo.toml  package.json
deploy/: anchor_template-keypair.json  script.ts
programs/anchor-template/: Cargo.toml
programs/anchor-template/src/: lib.rs
programs/anchor-template/src/instructions/: decrement.rs  increment.rs  initialize.rs  mod.rs
programs/anchor-template/src/states/: data.rs
programs/anchor-template/src/util/: pda.rs
services/: constants.ts  decrement.ts  increment.ts  inititalize.ts  interfaces.ts
tests/: test.spec.ts
