[workspace]
members = [
    "programs/*"
]
metadata = { description = "A collection of programs to test the performance of the Rust compiler" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
